force-app/main/default/objects/SBQQ__TermCondition__c/fields/SBQQ__QuoteTerm__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__QuoteTerm__c</fullName>
        <description>Parent term for this term.</description>
        <inlineHelpText>Parent term for this term.</inlineHelpText>
        <label>Quote Term</label>
        <referenceTo>SBQQ__QuoteTerm__c</referenceTo>
        <relationshipLabel>Term Conditions</relationshipLabel>
        <relationshipName>UseConditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>