force-app/main/default/objects/SBQQ__TermCondition__c/fields/SBQQ__TestedVariable__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TestedVariable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Summary variable used in testing this condition.</description>
        <inlineHelpText>Summary variable used in testing this condition.</inlineHelpText>
        <label>Tested Variable</label>
        <referenceTo>SBQQ__SummaryVariable__c</referenceTo>
        <relationshipLabel>Term Conditions</relationshipLabel>
        <relationshipName>TermConditions</relationshipName>
        <type>Lookup</type>
    </CustomField>