force-app/main/default/objects/SBQQ__TermCondition__c/fields/SBQQ__Value__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Value__c</fullName>
        <description>Value to test against.</description>
        <inlineHelpText>Value to test against.</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>