force-app/main/default/objects/SBQQ__TermCondition__c/validationRules/SBQQ__Field_and_Variable.validationRule-meta.xml
<ValidationRule>
        <fullName>SBQQ__Field_and_Variable</fullName>
        <active>true</active>
        <description>Validates that either field or summary variable is selected, but not both.</description>
        <errorConditionFormula>AND(NOT(ISPICKVAL(SBQQ__TestedField__c, &#39;&#39;)),NOT(ISBLANK(SBQQ__TestedVariable__c)))</errorConditionFormula>
        <errorMessage>You may not select both field and variable to test. Create separate conditions to test against field and variable.</errorMessage>
    </ValidationRule>