force-app/main/default/objects/SBQQ__TermCondition__c/validationRules/SBQQ__Field_or_Variable.validationRule-meta.xml
<ValidationRule>
        <fullName>SBQQ__Field_or_Variable</fullName>
        <active>true</active>
        <description>Validates that either field or summary variable is selected.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__TestedField__c, &#39;&#39;),ISBLANK(SBQQ__TestedVariable__c))</errorConditionFormula>
        <errorMessage>You must select either field or variable to test.</errorMessage>
    </ValidationRule>